# Odoo-Hackathon-2026---TransitOps

./: .gitignore  README.md  docker-compose.yml
backend/: .env  .gitignore  Dockerfile  docker-compose.yml  package-lock.json  package.json  pyproject.toml
backend/app/: main.py
backend/app/core/: logging_config.py
backend/app/database/: database.py
backend/app/models/: otp_model.py  user_model.py  vehicle_model.py
backend/app/routers/: auth_router.py  vehicle_router.py
backend/app/schemas/: auth_schema.py  vehicle_schema.py
backend/app/utils/: email_utils.py  jwt_utils.py  otp_utils.py  password_utils.py
backend/src/: index.ts
backend/src/config/: cors.ts  db.ts  env.ts
backend/src/jobs/: cronJobs.ts
backend/src/middleware/: auditLog.ts  authenticate.ts  authorize.ts  errorHandler.ts  rateLimiter.ts  validate.ts
backend/src/models/: AuditLog.ts  Document.ts  Driver.ts  Expense.ts  FuelLog.ts  MaintenanceRecord.ts  Notification.ts  Trip.ts  User.ts  Vehicle.ts
backend/src/modules/analytics/: analytics.controller.ts  analytics.router.ts
backend/src/modules/auth/: auth.controller.ts  auth.router.ts  auth.schema.ts
backend/src/modules/documents/: documents.controller.ts  documents.router.ts
backend/src/modules/drivers/: drivers.controller.ts  drivers.router.ts  drivers.schema.ts
backend/src/modules/expenses/: expenses.controller.ts  expenses.router.ts  expenses.schema.ts
backend/src/seed/: seed.ts
backend/src/types/: express.d.ts
backend/src/utils/: bcrypt.ts  jwt.ts  pagination.ts  response.ts  s3.ts
frontend/: index.html  (+3 more)
(+49 files in other folders)
